# nostr-wot

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  flake.nix  justfile
src/: error.rs  lib.rs  parser.rs  relations.rs  tests.rs  utils.rs
src/traits/: basic.rs  dump_wot.rs  mod.rs
