[package]
name         = "nostr-wot"
description  = "lightweight nostr Web of Trust library"
license      = "MIT"
authors      = ["Awiteb <a@4rs.nl>"]
readme       = "README.md"
keywords     = ["nostr", "wot"]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85.1"

[dependencies]
flate2 = { version = "1.1.5", default-features = false, features = [
  "rust_backend",
] }

byteorder   = "1.5.0"
easy-ext    = "1.0.2"
nostr       = "0.44.2"
petgraph    = { version = "0.8.3", features = ["rayon"] }
thiserror   = "2.0.17"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
